# bmybbs-indes

./: README.md
.github/: dependabot.yml
c/: .gitignore  CMakeLists.txt  config.sample.cmake
c/src/: CMakeLists.txt  article.c  board.c  jni_utils.c  jni_utils.h
java/: .gitignore  pom.xml
java-indes/: README.md  pom.xml
java-indes/src/edu/xjtu/bmybbs/: App.java  Constants.java  Indexer.java  Searcher.java
java/src/edu/xjtu/bmybbs/: App.java  Constants.java  Indexer.java  Searcher.java  Utils.java
java/src/edu/xjtu/bmybbs/ythtbbs/: Article.java  Board.java
